crates/swc_ecma_parser/tests/test262-error-references/fail/47b1abed697fe128.js.stderr
error: Not a pattern
 --> $DIR/tests/test262-parser/fail/47b1abed697fe128.js:1:2
  |
1 | ((a),...b) => 0;
  |  ^^^

